--- a/source/css/styles.css
+++ b/source/css/styles.css
@@ -1,7 +1,10 @@
 body {
     background: #eee;
-    text-align: center;
-    padding: 0 25px;
+}
+
+.container {
+    height: 100%;
+    width: 100%;
 }
 
 #main {
